--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,6 +3,9 @@ project(CppServer)
 
 set(CMAKE_CXX_STANDARD 20)
 
-add_executable(CppServer main.cpp)
+add_executable(CppServer main.cpp
+        sha256.h
+        sha256.cpp
+)
 
 target_link_libraries(CppServer ws2_32)
